# python-althaia

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build.py  builder.py  pyproject.toml
.github/workflows/: manylinux.yaml  wheels.yaml
althaia/: __init__.py  monkey.py
althaia/marshmallow/: .gitignore  __init__.py  class_registry.py  decorators.py  error_store.py  fields.py  schema.py  types.py  utils.py  validate.py
patches/: 001_fix_type_annotation.patch  002_optimised_serialization.patch
scripts/: build_alpine_install_rust.sh  upstream_performance.sh  upstream_reset.sh  upstream_test.sh  version_check.sh
